<?xml version="1.0"?>
<package format="3">
  <name>expressiongraph</name>
  <description>
    This package provides an expression tree framework for the Kinematics 
    and Dynamics Library (KDL). 
  </description>
  <version>0.1.0</version> <!-- TODO: is this correct? -->
  <maintainer email="erwin.aertbelien@kuleuven.be">Erwin Aertbelien</maintainer>
  <author email="erwin.aertbelien@kuleuven.be">Erwin Aertbelien</author>
  <license>EUPL v1.1</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>orocos_kdl</build_depend>
  <exec_depend>orocos_kdl</exec_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
